# Luminous

./: .gitattributes  .gitignore  Admin guide - DE.md  CHANGELOG.md  Installation guide - EN.md  LICENSE  LUMINOUS - TODO.md  Luminous Dokumentation.md  README.md  TODO.md  package-lock.json  package.json
Electron App/: README.txt
Legacy_Bachelorarbeit/: README.txt
Legacy_Bachelorarbeit/NOC Server/: shutdown.py
Server Code/: README.txt  noc.service  tree.txt
Server Code/NOC Server/: dataLogger.py  db_helper.py  noc_server.py  shutdown.py
ServerCode/: requirements.txt  tree.txt
ServerCode/NOC Server/: dataLogger.py  noc_server.py
TestServer/: server.py
backend/: .gitignore  channelValue_handler.py  motorMix_handler.py  ola_handler.py  requirements.txt  server.py  sever.py  socket.py  socket_events.py  wsgi.py
backend-test/: Cargo.toml
backend-test/src/: main.rs  models.rs
backend/server/: __init__.py  database.db  led_control.py  models.py  motorMix_driver.py  motorMix_handler.py  routes.py  socket.py  socketTest.py
backend/static/: index.html
comm_MID-server_test/: MOTORMIX_driver.py  MOTORMIX_logic.py  TestServerOLA.py  requirements.txt  testServer.py  testServerNoMidi.py
comm_MID-server_test/templates/: fader.html  faderTest.html  (+1 more)
electron/: index.html  main.js  package-lock.json  package.json
electron-vite-project/: index.html  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
pythonProject1/: MOTORMIX_driver.py  testServer.py
vite/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+215 files in other folders)
